--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/luxon": "^3",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
